@@ -3,5 +3,5 @@ rvm:
   - 1.9.3
 before_script:
   - "ruby lib/initial_setup.rb ../.travis_setup"
-  - "mysql -e 'create database notes_test;'"
+  - "psql -c 'create database tasktracker_test;' -U postgres"
   - "bundle exec rake db:migrate"
