@@ -4,7 +4,8 @@ gem 'rails',                '3.2.11'
 
 # Database Adapter
 # Install instructions for Windows: http://blog.mmediasys.com/2011/07/07/installing-mysql-on-windows-7-x64-and-using-ruby-with-it/
-gem 'mysql2',               '0.3.11'
+# gem 'mysql2',               '0.3.11'
+gem 'pg',                   '0.14.1'
 gem 'thin',                 '~> 1.5.0',           :platforms => [ :mswin, :mingw ]
 gem 'eventmachine',         '~> 1.0.0',           :platforms => [ :mswin, :mingw ]
 
