@@ -11,6 +11,7 @@ valid:
   users_per_page: 10
   email: valid@example.com
   screen_token: 4F30E29D18C7B6A5
+  encrypted_password: ""
 
 two:
   first_name: MyString
@@ -21,6 +22,7 @@ two:
   email_notifications: { send_email: false }
   users_per_page: 10
   email: EmailTwo
+  encrypted_password: ""
 
 admin:
   first_name: MyString
@@ -31,6 +33,7 @@ admin:
   email_notifications: {}
   users_per_page: 10
   email: admin@example.com
+  encrypted_password: ""
 
 pending:
   first_name: MyString
@@ -41,6 +44,7 @@ pending:
   email_notifications: {}
   users_per_page: 10
   email: pending@example.com
+  encrypted_password: ""
 
 deleted:
   first_name: MyString
@@ -51,6 +55,7 @@ deleted:
   email_notifications: {}
   users_per_page: 10
   email: deleted@example.com
+  encrypted_password: ""
 
 send_no_email:
   first_name: FirstName
@@ -60,6 +65,7 @@ send_no_email:
   system_admin: false
   email_notifications: { send_email: false }
   email: send_no_email@example.com
+  encrypted_password: ""
 
 send_no_email_for_project_one:
   first_name: FirstName
@@ -69,6 +75,7 @@ send_no_email_for_project_one:
   system_admin: false
   email_notifications: { "project_<%= ActiveRecord::Fixtures.identify(:one) %>": false }
   email: send_no_email_for_project_one@example.com
+  encrypted_password: ""
 
 send_no_email_for_sticky_creation:
   first_name: FirstName
@@ -78,6 +85,7 @@ send_no_email_for_sticky_creation:
   system_admin: false
   email_notifications: { sticky_creation: false }
   email: send_no_email_for_sticky_creation@example.com
+  encrypted_password: ""
 
 send_no_email_for_project_one_sticky_creation:
   first_name: FirstName
@@ -87,6 +95,7 @@ send_no_email_for_project_one_sticky_creation:
   system_admin: false
   email_notifications: { "project_<%= ActiveRecord::Fixtures.identify(:one) %>_sticky_creation": false }
   email: send_no_email_for_project_one_sticky_creation@example.com
+  encrypted_password: ""
 
 send_no_email_for_sticky_completion:
   first_name: FirstName
@@ -96,6 +105,7 @@ send_no_email_for_sticky_completion:
   system_admin: false
   email_notifications: { sticky_completion: false }
   email: send_no_email_for_sticky_completion@example.com
+  encrypted_password: ""
 
 send_no_email_for_project_one_sticky_completion:
   first_name: FirstName
@@ -105,6 +115,7 @@ send_no_email_for_project_one_sticky_completion:
   system_admin: false
   email_notifications: { "project_<%= ActiveRecord::Fixtures.identify(:one) %>_sticky_completion": false }
   email: send_no_email_for_project_one_sticky_completion@example.com
+  encrypted_password: ""
 
 send_no_email_for_sticky_comments:
   first_name: FirstName
@@ -114,6 +125,7 @@ send_no_email_for_sticky_comments:
   system_admin: false
   email_notifications: { sticky_comments: false }
   email: send_no_email_for_sticky_comments@example.com
+  encrypted_password: ""
 
 send_no_email_for_project_one_sticky_comments:
   first_name: FirstName
@@ -123,6 +135,7 @@ send_no_email_for_project_one_sticky_comments:
   system_admin: false
   email_notifications: { "project_<%= ActiveRecord::Fixtures.identify(:one) %>_sticky_comments": false }
   email: send_no_email_for_project_one_sticky_comments@example.com
+  encrypted_password: ""
 
 service_account:
   first_name: Service
@@ -134,3 +147,4 @@ service_account:
   email_notifications: {}
   users_per_page: 10
   email: service_account@example.com
+  encrypted_password: ""
